--- a/client/app.json
+++ b/client/app.json
@@ -1,8 +1,8 @@
 {
   "pages":[
     "pages/index/index",
-    "pages/index/search",
-    "pages/index/item"
+    "pages/search/search",
+    "pages/item/item"
   ],
   "window":{
   "backgroundColor": "#EEE",
