--- a/client/app.json
+++ b/client/app.json
@@ -2,6 +2,10 @@
   "pages":[
     "pages/index/index",
     "pages/search/search",
+    "pages/collector/collector",
+    "pages/mine/mine",
+    "pages/picset/picset",
+    "pages/list/list",
     "pages/item/item"
   ],
   "window":{
