--- a/client/app.json
+++ b/client/app.json
@@ -1,10 +1,10 @@
 {
   "pages": [
+    "pages/index/index",
     "pages/list/list",
     "pages/mine/mine",
     "pages/collector/collector",
     "pages/picset/picset",
-    "pages/index/index",
     "pages/search/search",
     "pages/item/item"
   ],
@@ -14,5 +14,31 @@
     "navigationBarBackgroundColor": "#FFFF00",
     "navigationBarTitleText": "图片搜索",
     "navigationBarTextStyle": "black"
+  },
+  "tabBar": {
+    "selectedColor":"lightgreen",
+    "backgroundColor":"#EEE",
+    "list": [
+      {
+        "pagePath": "pages/index/index",
+        "text": "首页"
+      },
+      {
+        "pagePath": "pages/picset/picset",
+        "text": "图集"
+      },
+      {
+        "pagePath": "pages/search/search",
+        "text": "搜索"
+      },
+      {
+        "pagePath": "pages/collector/collector",
+        "text": "收藏"
+      },
+      {
+        "pagePath": "pages/mine/mine",
+        "text": "我的"
+      }
+    ]
   }
 }
