--- a/server/package.json
+++ b/server/package.json
@@ -21,6 +21,7 @@
         "mkdir-p": "0.0.7",
         "mysql": "^2.15.0",
         "pify": "^2.3.0",
+        "segment": "^0.1.3",
         "wafer-node-sdk": "^1.3.4"
     },
     "devDependencies": {
