--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
         "koa-bodyparser": "^3.2.0",
         "koa-log4": "^2.1.0",
         "koa-router": "^7.4.0",
+        "koa-sslify": "^2.1.2",
         "lodash": "^4.17.10",
         "mkdir-p": "0.0.7",
         "mysql": "^2.15.0",
