--- a/server/package.json
+++ b/server/package.json
@@ -12,12 +12,14 @@
     "license": "MIT",
     "dependencies": {
         "axios": "^0.15.3",
+        "co-fs": "^1.2.0",
         "knex": "^0.13.0",
         "koa": "^2.5.1",
         "koa-bodyparser": "^3.2.0",
         "koa-log4": "^2.1.0",
         "koa-router": "^7.4.0",
         "koa-sslify": "^2.1.2",
+        "koa-static": "^4.0.3",
         "lodash": "^4.17.10",
         "mkdir-p": "0.0.7",
         "mysql": "^2.15.0",
