--- a/server/package.json
+++ b/server/package.json
@@ -25,7 +25,8 @@
         "mysql": "^2.15.0",
         "pify": "^2.3.0",
         "segment": "^0.1.3",
-        "wafer-node-sdk": "^1.3.4"
+        "wafer-node-sdk": "^1.3.4",
+        "wafer2-client-sdk": "^1.1.3"
     },
     "devDependencies": {
         "babel-eslint": "^7.1.0",
